# BrightS

./: .gitignore  AGENTS.md  CMakeLists.txt  File_Struct_Define  LICENSE  LICENSE_COMPATIBILITY.md  README.md  TODONOW.md  index.html  view.html
.github/workflows/: build.yml  release.yml
arch/i386/: apic.c  apic.h  entry.asm  entry.c  gdt.c  gdt.h  idt.c  idt.h  io.h  ioapic.c  ioapic.h  isr.asm  link.ld  msr.h  mtrr.c  paging.c  paging.h  pci.c  pci.h  pic.h  pic_pit.c  pit.h  syscall_abi.c  syscall_abi.h  trap.c  trap.h  trap_console.h  user_enter.S  user_enter_from_syscall.S
arch/x86_64/: cpu_local.c  enter_user_from_syscall.S  gdt.c  gdt.h  hpet.c  idt.c  idt.h  io.h  isr.S  msr.h  mtrr.h  paging.c  paging.h  pci.c  pic_pit.c  syscall_abi.c  syscall_entry.S  trap.c  trap_console.h  tss.h  uefi.h  uefi_entry.c  uefi_memmap.c  uefi_memmap.h  user_enter.S  user_stub.S
config/: network.h
config/userspace/: example.pf
docs/: CHANGELOG.md  I386_PORTING_PLAN.md  INSTALLATION.md  OPTIMIZATION_REPORT.md  PROGRESS.md  README.md  README_ja.md  README_zh_CN.md  SECURITY_STATUS.md  TODO.md
docs/api-reference/: API.md  README.md
docs/developer-guide/: CONTRIBUTING.md  CONTRIBUTING_ja.md  CONTRIBUTING_zh_CN.md  DEVELOPMENT.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  README.md  README_ja.md  README_zh_CN.md
docs/runtime/: README.md
docs/user-guide/: COMMAND_REFERENCE.md  COMMAND_REFERENCE_CN.md  COMMAND_REFERENCE_ja.md  README.md  README_ja.md
docs/vmware/: README.md
drivers/: ahci.c  ahci.h  block.c  block.h  display.c  display.h  fb.c  fb.h  font.c  font.h  gpu_hal.c  gpu_hal.h  im.c  im.h  nvme.c  nvme.h  ps2kbd.c  ps2kbd.h  ramdisk.c  ramdisk.h  render.c  render.h  rtc.c  serial.c  serial.h  shader.c  shader.h  theme.c  theme.h  tty.c  tty.h  tui.c  tui.h  uhci.c  uhci.h  usb.h  usb_core.c  usb_hid.c  usb_msc.c  vulkan.c  (+1 more)
include/kernel/: acpi.h  ahci.h  block.h  cache.h  cpu_local.h  devfs_vfs.h  elf.h  gdt.h  hpet.h  hwinfo.h  idt.h  io.h  kernel_main.h  kernel_util.h  lightshell.h  monitor.h  net.h  nvme.h  paging.h  pci.h  pf.h  pic.h  pipe_vfs.h  pit.h  pmem.h  printf.h  proc.h  ps2kbd.h  ramfs.h  ramfs_vfs.h  rtc.h  rust_ffi.h  serial.h  signal.h  simd.h  smp.h  spinlock.h  stddef.h  syscall_abi.h  trap.h  (+6 more)
kernel/core/: acpi.c  boot_splash.c  boot_splash.h  cache.c  clock.c  clock.h  elf.c  elf.h  hwinfo.c  kernel_main.c  kernel_main.h  kernel_util.h  kmalloc.c  kmalloc.h  lightshell.c  lightshell.h  pmem.c  pmem.h  printf.c  (+26 more)
kernel/rust/: Cargo.toml  i686-brights-kernel.json
kernel/rust/.cargo/: config.toml
kernel/rust/src/: lib.rs
scripts/: build-i386.sh  build-x86_64.sh  create-efi-img.py  make-iso.sh
tests/: CMakeLists.txt  test_benchmark.c  test_extended.c  test_kmalloc.c  test_ramfs.c  test_sched.c  test_stubs.c
tools/: create-disk-img.py  create-efi-img.py  elf_to_c.py  grub.cfg  make-iso.sh  run-qemu-kernel.sh  run-qemu.sh
(+124 files in other folders)
