[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2021"
description = "BrightS kernel Rust module — optimized allocator, memory, and hash routines"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
